--- a/index.html
+++ b/index.html
@@ -92,25 +92,48 @@
 
     /* Chat content */
     .chat-body {
-      display:flex;
-      flex-direction:column;
-      height:100%;
-    }
+  display:flex;
+  flex-direction:column;
+  height:calc(100% - 60px); /* keep inside chat column */
+  overflow:hidden; /* prevent overflow */
+}
 
-    #messages {
-      flex:1;
-      overflow:auto;
-      padding:12px;
-      box-sizing:border-box;
-    }
 
-    .msg {
-      background:rgba(255,255,255,0.03);
-      padding:8px;
-      margin-bottom:8px;
-      border-radius:8px;
-      font-size:14px;
-    }
+   #messages {
+  flex:1;
+  min-height:0;
+  overflow-y:auto;
+  padding:12px;
+  box-sizing:border-box;
+  display:flex;         /* ADD THIS */
+  flex-direction:column;/* ADD THIS */
+  gap:8px;              /* optional spacing */
+}
+
+
+   .msg {
+  max-width: 75%;     
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  padding: 8px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+
+/* WhatsApp-style left/right alignment */
+.msg-left {
+  align-self: flex-start;
+  margin-right: auto;
+  background: rgba(255,255,255,0.07);
+}
+
+.msg-right {
+  align-self: flex-end;
+  margin-left: auto;
+  background: rgba(255,255,255,0.15);
+}
 
     .sys {
       font-style:italic;
@@ -171,14 +194,22 @@
 
     h1 { font-size:48px; margin-bottom:40px; }
 
-    .input-wrap{ position:relative; display:inline-block; }
+    .input-wrap{
+  position:relative;
+  display:inline-block;
+  margin:0 auto;
+  width:260px; /* FIX: this keeps the eye icon inside */
+}
+
+
+
 
     #codeInput{
-      width:360px;
+      width:200px;
       padding:12px 44px 12px 16px;
       background:transparent;
       border:1px solid #333;
-      border-radius:12px;
+      border-radius:30px;
       color:white;
       font-size:18px;
       outline:none;
@@ -188,14 +219,18 @@
     .eye-btn svg { width:22px;height:22px; fill:white; opacity:0.9; }
 
     .bat-btn{
-      margin-top:25px;
-      font-size:20px;
-      font-weight:bold;
-      background:transparent;
-      color:white;
-      border:none;
-      cursor:pointer;
-    }
+  margin-top:25px;
+  font-size:20px;
+  font-weight:bold;
+  background:transparent;
+  color:white;
+  border:none;
+  cursor:pointer;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 
     /* Page 2 topbar and files - no gap to chat */
     #page2 .topbar { display:flex; justify-content:space-between; margin-bottom:20px; align-items:center; }
@@ -224,6 +259,56 @@
     @media (max-width:900px){
       .chat { display:none; }
     }
+/* Ultra-thin minimal yellow scrollbar for chat */
+#messages::-webkit-scrollbar {
+  width: 4px;              /* very thin */
+}
+
+#messages::-webkit-scrollbar-track {
+  background: transparent; /* no track bar */
+}
+
+#messages::-webkit-scrollbar-thumb {
+  background: var(--yellow);
+  border-radius: 10px;
+}
+
+#messages::-webkit-scrollbar-thumb:hover {
+  background: #ffe45c;      /* lighter yellow on hover */
+}
+/* auto-color bubbles */
+.msg {
+  max-width: 75%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  padding: 8px 10px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+.msg-left {
+  align-self: flex-start;
+  margin-right: auto;
+}
+
+.msg-right {
+  align-self: flex-end;
+  margin-left: auto;
+}
+
+/* this class receives unique background color from JS */
+.auto-color {
+  background: rgba(255,255,255,0.12);
+}
+.user-name {
+  font-weight: 700;     /* bold */
+  font-size: 12px;      /* slightly bigger */
+  margin-bottom: 2px;   /* small spacing above message time */
+}
+
+
+
   </style>
 </head>
 <body>
@@ -260,7 +345,7 @@
           <h1>Clinkly</h1>
 
           <div class="input-wrap">
-            <input id="codeInput" type="password" placeholder="Enter code (min 4 chars)">
+            <input id="codeInput" type="password" placeholder="Enter code">
             <button class="eye-btn" onclick="toggleEye()">
               <svg viewBox="0 0 24 24"><path d="M12 5c-5 0-9.27 3.11-11 7 1.73 3.89 6 7 11 7s9.27-3.11 11-7c-1.73-3.89-6-7-11-7zm0 12a5 5 0 110-10 5 5 0 010 10z"/><circle cx="12" cy="12" r="2.5"/></svg>
             </button>
@@ -320,6 +405,60 @@ let currentCode = "";
 let deleteMode = false;
 let chatChannel = null;
 let chatName = "";
+// timers map for scheduled deletions: key = `${ts}_${user}`
+const deletionTimers = new Map();
+
+/* ---------------- STORAGE HELPERS ---------------- */
+// storage key for a given room
+function storageKeyForRoom(code){ return `clinkly_msgs_${code}`; }
+
+// load messages for room, and remove any older than 3 hours
+function loadStoredMessagesForRoom(code){
+  if(!code) return [];
+  try{
+    const raw = localStorage.getItem(storageKeyForRoom(code));
+    const arr = raw ? JSON.parse(raw) : [];
+    const cutoff = Date.now() - (3 * 60 * 60 * 1000);
+    const filtered = arr.filter(m => Number(m.ts) >= cutoff);
+    // rewrite filtered (cleanup old)
+    localStorage.setItem(storageKeyForRoom(code), JSON.stringify(filtered));
+    return filtered;
+  }catch(e){
+    console.warn('loadStoredMessagesForRoom error', e);
+    return [];
+  }
+}
+
+function persistMessageForRoom(code, msg){
+  if(!code || !msg) return;
+  try{
+    const key = storageKeyForRoom(code);
+    const raw = localStorage.getItem(key);
+    const arr = raw ? JSON.parse(raw) : [];
+    // dedupe by ts+user+text to be safe
+    const exists = arr.some(m => String(m.ts) === String(msg.ts) && m.user === msg.user && m.text === msg.text);
+    if(!exists){
+      arr.push(msg);
+      localStorage.setItem(key, JSON.stringify(arr));
+    }
+  }catch(e){
+    console.warn('persistMessageForRoom error', e);
+  }
+}
+
+function removeMessageFromStorage(code, msg){
+  if(!code || !msg) return;
+  try{
+    const key = storageKeyForRoom(code);
+    const raw = localStorage.getItem(key);
+    if(!raw) return;
+    let arr = JSON.parse(raw);
+    arr = arr.filter(m => !(String(m.ts) === String(msg.ts) && m.user === msg.user && m.text === msg.text));
+    localStorage.setItem(key, JSON.stringify(arr));
+  }catch(e){
+    console.warn('removeMessageFromStorage error', e);
+  }
+}
 
 /* -------------- PAGE 1: minimal validation & move to page2 -------------- */
 function toggleEye(){
@@ -481,82 +620,183 @@ function initChatRoomForCode(code){
     try{ chatChannel.unsubscribe(); }catch(e){}
     chatChannel = null;
   }
-  chatChannel = supa.channel(`chat-${code}`);
+  // enable broadcasting to self so join/messages come back to sender too
+  chatChannel = supa.channel(`chat-${code}`, {
+    config: { broadcast: { self: true } }
+  });
+
   // Listen for messages
   chatChannel.on('broadcast', { event: 'message' }, (payload) => {
     const { user, text, ts } = payload.payload || {};
     if(user && text !== undefined) {
-      appendChatMessage(user, text, ts);
+      appendChatMessage(user, text, ts, { fromStorage:false });
     }
   });
+
   // Listen for join events: event 'join' -> show "name vannu"
   chatChannel.on('broadcast', { event: 'join' }, (payload) => {
     const { user, ts } = payload.payload || {};
     if(user) appendSystem(`${user} vannu`);
   });
+
+  // Listen for leave events (optional)
+  chatChannel.on('broadcast', { event: 'leave' }, (payload) => {
+    const { user } = payload.payload || {};
+    if(user) appendSystem(`${user} poyi`);
+  });
+
   // subscribe
   chatChannel.subscribe().then(() => {
-    // ready
+    // once subscribed, load stored messages for this room and show them
+    try{
+      const stored = loadStoredMessagesForRoom(code);
+      // append stored messages in chronological order
+      stored.sort((a,b)=> Number(a.ts) - Number(b.ts));
+      for(const m of stored){
+        appendChatMessage(m.user, m.text, m.ts, { fromStorage:true });
+      }
+    }catch(e){
+      console.warn('load stored messages failed', e);
+    }
   }).catch(e => console.warn('chat subscribe failed', e));
 }
 
-async function joinChatWithName(){
+async function joinChatWithName() {
   const name = (document.getElementById('nameInput').value || '').trim();
-  if(!name) return alert('Enter your name to join');
+  if (!name) return alert('Enter your name to join');
+
   chatName = name;
-  // hide name screen, show chat content
+
+  // show chat box
   document.getElementById('nameScreen').style.display = 'none';
   document.getElementById('chatContent').style.display = 'flex';
-  // announce join to others as a 'join' broadcast
-  if(chatChannel){
-    try{
-      await chatChannel.send({ type:'broadcast', event:'join', payload: { user: chatName, ts: Date.now() }});
-    }catch(e){ console.warn('join broadcast failed', e); }
+
+  // 🔥 Load stored messages AFTER chat shows
+  try {
+    const stored = loadStoredMessagesForRoom(currentCode);
+    stored.sort((a,b)=> Number(a.ts) - Number(b.ts));
+    for (const m of stored) {
+      appendChatMessage(m.user, m.text, m.ts, { fromStorage:true });
+    }
+  } catch (e) {
+    console.warn("Failed loading stored messages", e);
   }
-  // focus input
+
+  // announce join
+  if (chatChannel) {
+    try {
+      await chatChannel.send({
+        type: 'broadcast',
+        event: 'join',
+        payload: { user: chatName, ts: Date.now() }
+      });
+    } catch (e) {}
+  }
+
   document.getElementById('chatInput').focus();
 }
+
 
 /* Send chat message */
 async function sendChatMessage(){
   const txt = (document.getElementById('chatInput').value || '').trim();
   if(!txt) return;
   if(!chatChannel || !chatName) return;
-  const payload = { user: chatName, text: txt, ts: Date.now() };
+  const ts = Date.now();
+  const payload = { user: chatName, text: txt, ts };
   try{
     await chatChannel.send({ type:'broadcast', event:'message', payload });
-    // also locally append (others will receive via supabase too)
-    appendChatMessage(chatName, txt, Date.now());
+    // do NOT append locally here — append happens when the broadcast comes back
     document.getElementById('chatInput').value = '';
   }catch(e){
     console.error('send failed', e);
   }
 }
 
-/* Append chat message to UI */
-function appendChatMessage(user, text, ts){
-  const wrap = document.getElementById('messages');
-  const el = document.createElement('div');
-  el.className = 'msg';
-  // meta row
-  const meta = document.createElement('div');
-  meta.className = 'message-meta';
-  const left = document.createElement('div');
-  left.textContent = user;
-  const right = document.createElement('div');
+/* Append chat message to UI
+   options: { fromStorage: boolean } — if true, don't persist again (already in storage)
+*/
+// AUTO COLOR — gives each username a unique pastel color
+function hashColor(str) {
+  let hash = 0;
+  for (let i = 0; i < str.length; i++) {
+    hash = str.charCodeAt(i) + ((hash << 5) - hash);
+  }
+  const hue = Math.abs(hash) % 360;
+  return `hsl(${hue}, 70%, 60%)`; 
+}
+
+function appendChatMessage(user, text, ts, options = { fromStorage:false }){
   try{
-    const d = new Date(ts || Date.now());
-    const hh = String(d.getHours()).padStart(2,'0');
-    const mm = String(d.getMinutes()).padStart(2,'0');
-    right.textContent = `${hh}:${mm}`;
-  }catch(e){ right.textContent = ''; }
-  meta.appendChild(left); meta.appendChild(right);
-  const body = document.createElement('div');
-  body.textContent = text;
-  el.appendChild(meta);
-  el.appendChild(body);
-  wrap.appendChild(el);
-  wrap.scrollTop = wrap.scrollHeight;
+    const wrap = document.getElementById('messages');
+    // dedupe: check if message already present in DOM (by ts+user+text)
+    const selector = `.msg[data-ts="${ts}"][data-user="${CSS.escape(String(user))}"]`;
+    if(document.querySelector(selector)) return;
+
+    const el = document.createElement('div');
+    el.className = 'msg';
+// WhatsApp-style left/right alignment
+if (user === chatName) {
+  el.classList.add('msg-right');   // your message → right
+} else {
+  el.classList.add('msg-left');    // other messages → left
+}
+// AUTO COLOR SYSTEM
+function hashColor(str) {
+  let hash = 0;
+  for (let i = 0; i < str.length; i++) {
+    hash = str.charCodeAt(i) + ((hash << 5) - hash);
+  }
+  const hue = Math.abs(hash) % 360; 
+  return `hsl(${hue}, 65%, 35%)`;
+}
+
+// apply auto color
+
+
+
+    el.setAttribute('data-ts', ts);
+    el.setAttribute('data-user', user);
+
+    // meta row
+    const meta = document.createElement('div');
+    meta.className = 'message-meta';
+    const left = document.createElement('div');
+left.className = 'user-name';
+left.textContent = user;
+left.style.color = hashColor(user.toLowerCase());
+
+
+// auto-color username
+left.style.color = hashColor(user.toLowerCase());
+
+    const right = document.createElement('div');
+    try{
+      const d = new Date(Number(ts) || Date.now());
+      const hh = String(d.getHours()).padStart(2,'0');
+      const mm = String(d.getMinutes()).padStart(2,'0');
+      right.textContent = `${hh}:${mm}`;
+    }catch(e){ right.textContent = ''; }
+    meta.appendChild(left); meta.appendChild(right);
+
+    const body = document.createElement('div');
+    body.textContent = text;
+
+    el.appendChild(meta);
+    el.appendChild(body);
+    wrap.appendChild(el);
+    wrap.scrollTop = wrap.scrollHeight;
+
+    // persist if not fromStorage
+    if(!options.fromStorage && currentCode){
+      persistMessageForRoom(currentCode, { user, text, ts });
+    }
+
+    // schedule deletion (3 hours)
+    scheduleDeletionForMessage(currentCode, { user, text, ts });
+  }catch(e){
+    console.warn('appendChatMessage error', e);
+  }
 }
 
 /* Append system message like "Rahul vannu" */
@@ -582,12 +822,46 @@ async function leaveChatRoom(){
   }
   chatChannel = null;
   chatName = '';
+  // clear scheduled deletions
+  for(const t of deletionTimers.values()){ clearTimeout(t); }
+  deletionTimers.clear();
   // reset UI
   document.getElementById('nameScreen').style.display = 'flex';
   document.getElementById('chatContent').style.display = 'none';
   document.getElementById('messages').innerHTML = '';
   document.getElementById('nameInput').value = '';
   document.getElementById('chatInput').value = '';
+}
+
+/* Schedule deletion of message after 3 hours
+   Also removes from localStorage for the room.
+*/
+function scheduleDeletionForMessage(code, msg){
+  try{
+    if(!msg || !msg.ts || !msg.user) return;
+    const key = `${msg.ts}_${msg.user}`;
+    if(deletionTimers.has(key)) return; // already scheduled
+
+    const tsNum = Number(msg.ts);
+    const now = Date.now();
+    const threeHours = 3 * 60 * 60 * 1000;
+    // compute delay — if message older than 3h, delete immediately
+    let delay = (tsNum + threeHours) - now;
+    if(delay <= 0) delay = 0;
+
+    const timer = setTimeout(() => {
+      // remove DOM nodes matching this message
+      const nodes = [...document.querySelectorAll(`.msg[data-ts="${msg.ts}"][data-user="${CSS.escape(String(msg.user))}"]`)];
+      nodes.forEach(n => n.remove());
+      // also remove from storage
+      removeMessageFromStorage(code, msg);
+      deletionTimers.delete(key);
+    }, delay);
+
+    deletionTimers.set(key, timer);
+  }catch(e){
+    console.warn('scheduleDeletionForMessage error', e);
+  }
 }
 
 /* ------------- Wire UI actions ------------- */
@@ -604,7 +878,10 @@ document.getElementById('nameInput').addEventListener('keydown', (e)=>{
 
 document.getElementById('sendBtn').addEventListener('click', sendChatMessage);
 document.getElementById('chatInput').addEventListener('keydown', (e)=>{
-  if(e.key === 'Enter') sendChatMessage();
+  if(e.key === 'Enter' && !e.shiftKey){
+    e.preventDefault();
+    sendChatMessage();
+  }
 });
 
 /* make sure to cleanup when user leaves page */
@@ -616,7 +893,7 @@ window.addEventListener('beforeunload', () => {
 window.addEventListener('popstate', () => {
   try { leaveChatRoom(); } catch(e){}
 });
-
 </script>
+
 </body>
 </html>
