--- a/index.html
+++ b/index.html
@@ -92,56 +92,48 @@
 
     /* Chat content */
     .chat-body {
-      display:flex;
-      flex-direction:column;
-      height:calc(100% - 60px); /* keep inside chat column */
-      overflow:hidden; /* prevent overflow */
-    }
+  display:flex;
+  flex-direction:column;
+  height:calc(100% - 60px); /* keep inside chat column */
+  overflow:hidden; /* prevent overflow */
+}
 
-    #messages {
-      flex:1;
-      min-height:0;
-      overflow-y:auto;
-      padding:12px;
-      box-sizing:border-box;
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-    }
 
-    /* Typing indicator (NEW HTML inserted below #messages) */
-    .typing-indicator {
-      height:20px;
-      font-size:13px;
-      color:var(--muted);
-      padding-left:10px;
-      opacity:0;
-      transition:opacity 0.18s ease;
-      align-self:flex-start;
-    }
+   #messages {
+  flex:1;
+  min-height:0;
+  overflow-y:auto;
+  padding:12px;
+  box-sizing:border-box;
+  display:flex;         /* ADD THIS */
+  flex-direction:column;/* ADD THIS */
+  gap:8px;              /* optional spacing */
+}
 
-    .msg {
-      max-width: 75%;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-      padding: 8px;
-      border-radius: 10px;
-      margin-bottom: 8px;
-      font-size: 14px;
-    }
 
-    /* WhatsApp-style left/right alignment */
-    .msg-left {
-      align-self: flex-start;
-      margin-right: auto;
-      background: rgba(255,255,255,0.07);
-    }
+   .msg {
+  max-width: 75%;     
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  padding: 8px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
 
-    .msg-right {
-      align-self: flex-end;
-      margin-left: auto;
-      background: rgba(255,255,255,0.15);
-    }
+
+/* WhatsApp-style left/right alignment */
+.msg-left {
+  align-self: flex-start;
+  margin-right: auto;
+  background: rgba(255,255,255,0.07);
+}
+
+.msg-right {
+  align-self: flex-end;
+  margin-left: auto;
+  background: rgba(255,255,255,0.15);
+}
 
     .sys {
       font-style:italic;
@@ -196,18 +188,21 @@
     }
 
     /* Page1 / Page2 container */
-    #page0, #page1, #page2 { min-height:calc(100vh - 0px); }
+    #page1, #page2 { min-height:calc(100vh - 0px); }
 
     #page1 { padding-top:70px; }
 
     h1 { font-size:48px; margin-bottom:40px; }
 
     .input-wrap{
-      position:relative;
-      display:inline-block;
-      margin:0 auto;
-      width:260px; /* FIX: this keeps the eye icon inside */
-    }
+  position:relative;
+  display:inline-block;
+  margin:0 auto;
+  width:260px; /* FIX: this keeps the eye icon inside */
+}
+
+
+
 
     #codeInput{
       width:200px;
@@ -224,17 +219,18 @@
     .eye-btn svg { width:22px;height:22px; fill:white; opacity:0.9; }
 
     .bat-btn{
-      margin-top:25px;
-      font-size:20px;
-      font-weight:bold;
-      background:transparent;
-      color:white;
-      border:none;
-      cursor:pointer;
-      display:block;
-      margin-left:auto;
-      margin-right:auto;
-    }
+  margin-top:25px;
+  font-size:20px;
+  font-weight:bold;
+  background:transparent;
+  color:white;
+  border:none;
+  cursor:pointer;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 
     /* Page 2 topbar and files - no gap to chat */
     #page2 .topbar { display:flex; justify-content:space-between; margin-bottom:20px; align-items:center; }
@@ -263,52 +259,56 @@
     @media (max-width:900px){
       .chat { display:none; }
     }
-    /* Ultra-thin minimal yellow scrollbar for chat */
-    #messages::-webkit-scrollbar {
-      width: 4px;              /* very thin */
-    }
+/* Ultra-thin minimal yellow scrollbar for chat */
+#messages::-webkit-scrollbar {
+  width: 4px;              /* very thin */
+}
 
-    #messages::-webkit-scrollbar-track {
-      background: transparent; /* no track bar */
-    }
+#messages::-webkit-scrollbar-track {
+  background: transparent; /* no track bar */
+}
 
-    #messages::-webkit-scrollbar-thumb {
-      background: var(--yellow);
-      border-radius: 10px;
-    }
+#messages::-webkit-scrollbar-thumb {
+  background: var(--yellow);
+  border-radius: 10px;
+}
 
-    #messages::-webkit-scrollbar-thumb:hover {
-      background: #ffe45c;      /* lighter yellow on hover */
-    }
+#messages::-webkit-scrollbar-thumb:hover {
+  background: #ffe45c;      /* lighter yellow on hover */
+}
+/* auto-color bubbles */
+.msg {
+  max-width: 75%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  padding: 8px 10px;
+  border-radius: 10px;
+  margin-bottom: 8px;
+  font-size: 14px;
+}
 
-    .msg {
-      max-width: 75%;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-      padding: 8px 10px;
-      border-radius: 10px;
-      margin-bottom: 8px;
-      font-size: 14px;
-    }
+.msg-left {
+  align-self: flex-start;
+  margin-right: auto;
+}
 
-    .msg-left {
-      align-self: flex-start;
-      margin-right: auto;
-    }
+.msg-right {
+  align-self: flex-end;
+  margin-left: auto;
+}
 
-    .msg-right {
-      align-self: flex-end;
-      margin-left: auto;
-    }
+/* this class receives unique background color from JS */
+.auto-color {
+  background: rgba(255,255,255,0.12);
+}
+.user-name {
+  font-weight: 700;     /* bold */
+  font-size: 12px;      /* slightly bigger */
+  margin-bottom: 2px;   /* small spacing above message time */
+}
 
-    .auto-color {
-      background: rgba(255,255,255,0.12);
-    }
-    .user-name {
-      font-weight: 700;     /* bold */
-      font-size: 12px;      /* slightly bigger */
-      margin-bottom: 2px;   /* small spacing above message time */
-    }
+
+
   </style>
 </head>
 <body>
@@ -317,11 +317,9 @@
     <div id="chatCol" class="chat hidden" aria-hidden="true">
       <div class="chat-header">Chat</div>
 
-      <!-- name screen (vertically centered) -->
+      <!-- name screen (centered vertically) -->
       <div id="nameScreen" class="name-screen">
         <div class="name-box">
-          <!-- We will not expect the user to type name if logged in.
-               Name input still present but hidden if user exists -->
           <input id="nameInput" placeholder="Enter your name" maxlength="30" autocomplete="off" />
           <div id="daddySubmit">daddy is home</div>
         </div>
@@ -330,9 +328,6 @@
       <!-- chat content (hidden until joined) -->
       <div id="chatContent" class="chat-body" style="display:none;">
         <div id="messages"></div>
-
-        <!-- TYPING INDICATOR (NEW) -->
-        <div id="typingIndicator" class="typing-indicator"></div>
 
         <div class="chat-input-row">
           <input id="chatInput" placeholder="Type a message..." autocomplete="off" />
@@ -345,24 +340,8 @@
     <div class="main">
       <div class="wrap">
 
-        <!-- PAGE 0: LOGIN / REGISTER (NEW) -->
-        <div id="page0" style="display:block; text-align:left;">
-          <h1 style="text-align:center;">Welcome</h1>
-          <div style="max-width:400px;margin:0 auto;text-align:left;">
-            <label style="color:var(--muted);font-size:13px;">Username</label><br>
-            <input id="regUsername" placeholder="username" style="width:100%;padding:10px;margin-bottom:12px;border-radius:8px;border:1px solid #333;background:transparent;color:white;">
-            <label style="color:var(--muted);font-size:13px;">Password</label><br>
-            <input id="regPassword" type="password" placeholder="password" style="width:100%;padding:10px;margin-bottom:12px;border-radius:8px;border:1px solid #333;background:transparent;color:white;">
-            <div style="display:flex;gap:8px;justify-content:flex-end;">
-              <button class="btn" id="loginBtn">Login</button>
-              <button class="btn" id="registerBtn">Register</button>
-            </div>
-            <div id="authMessage" style="color:#f66;margin-top:10px;min-height:18px;"></div>
-          </div>
-        </div>
-
         <!-- PAGE 1 -->
-        <div id="page1" style="display:none;">
+        <div id="page1">
           <h1>Clinkly</h1>
 
           <div class="input-wrap">
@@ -426,7 +405,6 @@ let currentCode = "";
 let deleteMode = false;
 let chatChannel = null;
 let chatName = "";
-let typingTimeout = null; // NEW - used by typing indicator
 // timers map for scheduled deletions: key = `${ts}_${user}`
 const deletionTimers = new Map();
 
@@ -482,104 +460,7 @@ function removeMessageFromStorage(code, msg){
   }
 }
 
-/* ---------------- AUTH (NEW: Register / Login) ---------------- */
-
-// helper to show auth message (error or success)
-function setAuthMessage(txt, color='#f66'){
-  const el = document.getElementById('authMessage');
-  el.style.color = color;
-  el.textContent = txt;
-}
-
-// Register new user (plain text password as requested)
-async function registerUser(){
-  const u = (document.getElementById('regUsername').value || '').trim();
-  const p = (document.getElementById('regPassword').value || '').trim();
-  if(!u || !p) { setAuthMessage('Enter username and password'); return; }
-
-  try{
-    // check exists
-    const { data: existing, error: selErr } = await supa
-      .from('clinkly_users')
-      .select('id')
-      .eq('username', u)
-      .limit(1);
-
-    if(selErr){ console.error(selErr); setAuthMessage('Error checking username'); return; }
-    if(existing && existing.length > 0){ setAuthMessage('Username already taken'); return; }
-
-    // insert
-    const { data, error } = await supa
-      .from('clinkly_users')
-      .insert([{ username: u, password: p }]);
-
-    if(error){ console.error(error); setAuthMessage('Registration failed'); return; }
-
-    // auto-login: save to localStorage and go to page1
-    localStorage.setItem('clinkly_user', u);
-    chatName = u;
-    setAuthMessage('Registered! Redirecting...', '#6f6');
-
-    // small delay to show message then navigate
-    setTimeout(() => {
-      goToPage1AfterAuth();
-    }, 500);
-
-  }catch(e){
-    console.error('registerUser error', e);
-    setAuthMessage('Registration failed');
-  }
-}
-
-// Login existing user
-async function loginUser(){
-  const u = (document.getElementById('regUsername').value || '').trim();
-  const p = (document.getElementById('regPassword').value || '').trim();
-  if(!u || !p) { setAuthMessage('Enter username and password'); return; }
-
-  try{
-    const { data, error } = await supa
-      .from('clinkly_users')
-      .select('id,username,password')
-      .eq('username', u)
-      .limit(1);
-
-    if(error){ console.error(error); setAuthMessage('Login error'); return; }
-    if(!data || data.length === 0){ setAuthMessage('User not found. Please register first.'); return; }
-
-    const user = data[0];
-    if(user.password !== p){ setAuthMessage('Incorrect password'); return; }
-
-    // success
-    localStorage.setItem('clinkly_user', u);
-    chatName = u;
-    setAuthMessage('Login successful! Redirecting...', '#6f6');
-
-    setTimeout(() => {
-      goToPage1AfterAuth();
-    }, 300);
-
-  }catch(e){
-    console.error('loginUser error', e);
-    setAuthMessage('Login failed');
-  }
-}
-
-// go to page1 and prefill username input to avoid asking again
-function goToPage1AfterAuth(){
-  // hide page0, show page1
-  document.getElementById('page0').style.display = 'none';
-  document.getElementById('page1').style.display = 'block';
-
-  // if the user has a stored username, pre-fill the name input in chat
-  const stored = localStorage.getItem('clinkly_user');
-  if(stored){
-    document.getElementById('nameInput').value = stored;
-    chatName = stored;
-  }
-}
-
-/* ---------------- PAGE 1: minimal validation & move to page2 -------------- */
+/* -------------- PAGE 1: minimal validation & move to page2 -------------- */
 function toggleEye(){
   const i = document.getElementById('codeInput');
   i.type = i.type === 'password' ? 'text' : 'password';
@@ -746,12 +627,6 @@ function initChatRoomForCode(code){
 
   // Listen for messages
   chatChannel.on('broadcast', { event: 'message' }, (payload) => {
-
-    // 🔥 ensure typing hidden when any message arrives (prevents stuck indicator)
-    const ti = document.getElementById("typingIndicator");
-    if(ti){ ti.style.opacity = 0; }
-    clearTimeout(typingTimeout);
-
     const { user, text, ts } = payload.payload || {};
     if(user && text !== undefined) {
       appendChatMessage(user, text, ts, { fromStorage:false });
@@ -768,22 +643,6 @@ function initChatRoomForCode(code){
   chatChannel.on('broadcast', { event: 'leave' }, (payload) => {
     const { user } = payload.payload || {};
     if(user) appendSystem(`${user} poyi`);
-  });
-
-  // TYPING INDICATOR LISTENER (NEW)
-  chatChannel.on('broadcast', { event: 'typing' }, (payload) => {
-    const user = payload.payload.user;
-    if (!user || user === chatName) return;
-
-    const t = document.getElementById("typingIndicator");
-    if(!t) return;
-    t.textContent = `${user} typing...`;
-    t.style.opacity = 1;
-
-    clearTimeout(typingTimeout);
-    typingTimeout = setTimeout(() => {
-      t.style.opacity = 0;
-    }, 2000);
   });
 
   // subscribe
@@ -803,16 +662,7 @@ function initChatRoomForCode(code){
 }
 
 async function joinChatWithName() {
-  // if we have username saved from auth, use it automatically
-  const saved = localStorage.getItem('clinkly_user');
-  if(saved && !chatName){
-    chatName = saved;
-    // also ensure nameInput shows it (so UI looks normal)
-    const ni = document.getElementById('nameInput');
-    if(ni) ni.value = saved;
-  }
-
-  const name = (document.getElementById('nameInput').value || '').trim() || chatName;
+  const name = (document.getElementById('nameInput').value || '').trim();
   if (!name) return alert('Enter your name to join');
 
   chatName = name;
@@ -856,14 +706,8 @@ async function sendChatMessage(){
   const payload = { user: chatName, text: txt, ts };
   try{
     await chatChannel.send({ type:'broadcast', event:'message', payload });
-    // clear text
+    // do NOT append locally here — append happens when the broadcast comes back
     document.getElementById('chatInput').value = '';
-
-    // stop showing typing immediately after sending
-    const t = document.getElementById("typingIndicator");
-    if(t){ t.style.opacity = 0; }
-    clearTimeout(typingTimeout);
-
   }catch(e){
     console.error('send failed', e);
   }
@@ -879,9 +723,7 @@ function hashColor(str) {
     hash = str.charCodeAt(i) + ((hash << 5) - hash);
   }
   const hue = Math.abs(hash) % 360;
-
-  // Always bright colors (pastel + readable on dark)
-  return `hsl(${hue}, 80%, 75%)`;
+  return `hsl(${hue}, 70%, 60%)`; 
 }
 
 function appendChatMessage(user, text, ts, options = { fromStorage:false }){
@@ -893,12 +735,25 @@ function appendChatMessage(user, text, ts, options = { fromStorage:false }){
 
     const el = document.createElement('div');
     el.className = 'msg';
-    // WhatsApp-style left/right alignment
-    if (user === chatName) {
-      el.classList.add('msg-right');   // your message → right
-    } else {
-      el.classList.add('msg-left');    // other messages → left
-    }
+// WhatsApp-style left/right alignment
+if (user === chatName) {
+  el.classList.add('msg-right');   // your message → right
+} else {
+  el.classList.add('msg-left');    // other messages → left
+}
+// AUTO COLOR SYSTEM
+function hashColor(str) {
+  let hash = 0;
+  for (let i = 0; i < str.length; i++) {
+    hash = str.charCodeAt(i) + ((hash << 5) - hash);
+  }
+  const hue = Math.abs(hash) % 360; 
+  return `hsl(${hue}, 65%, 35%)`;
+}
+
+// apply auto color
+
+
 
     el.setAttribute('data-ts', ts);
     el.setAttribute('data-user', user);
@@ -907,9 +762,13 @@ function appendChatMessage(user, text, ts, options = { fromStorage:false }){
     const meta = document.createElement('div');
     meta.className = 'message-meta';
     const left = document.createElement('div');
-    left.className = 'user-name';
-    left.textContent = user;
-    left.style.color = hashColor(user.toLowerCase());
+left.className = 'user-name';
+left.textContent = user;
+left.style.color = hashColor(user.toLowerCase());
+
+
+// auto-color username
+left.style.color = hashColor(user.toLowerCase());
 
     const right = document.createElement('div');
     try{
@@ -1005,31 +864,11 @@ function scheduleDeletionForMessage(code, msg){
   }
 }
 
-/* ---------------- TYPING INDICATOR (send event) ---------------- */
-document.getElementById('chatInput').addEventListener('input', () => {
-  if (!chatChannel || !chatName) return;
-
-  chatChannel.send({
-    type: "broadcast",
-    event: "typing",
-    payload: { user: chatName }
-  });
-});
-
 /* ------------- Wire UI actions ------------- */
 document.addEventListener('click', (e) => {
-  // daddy is home click - use stored username if present
+  // daddy is home click
   if(e.target && e.target.id === 'daddySubmit') {
-    // If user is not yet logged in, show auth page
-    const saved = localStorage.getItem('clinkly_user');
-    if(saved && !chatName){
-      // fill name input and join
-      document.getElementById('nameInput').value = saved;
-      chatName = saved;
-      joinChatWithName();
-    } else {
-      joinChatWithName();
-    }
+    joinChatWithName();
   }
 });
 
@@ -1045,10 +884,6 @@ document.getElementById('chatInput').addEventListener('keydown', (e)=>{
   }
 });
 
-/* Auth buttons */
-document.getElementById('registerBtn').addEventListener('click', registerUser);
-document.getElementById('loginBtn').addEventListener('click', loginUser);
-
 /* make sure to cleanup when user leaves page */
 window.addEventListener('beforeunload', () => {
   try { leaveChatRoom(); } catch(e){}
@@ -1057,15 +892,6 @@ window.addEventListener('beforeunload', () => {
 /* If user navigates back using back button, also cleanup */
 window.addEventListener('popstate', () => {
   try { leaveChatRoom(); } catch(e){}
-});
-
-/* On load: if user already logged in (localStorage), show page1 directly (prefill name) */
-window.addEventListener('load', () => {
-  const saved = localStorage.getItem('clinkly_user');
-  if(saved){
-    // auto-fill the login fields for convenience (user still clicks Login)
-    document.getElementById('regUsername').value = saved;
-  }
 });
 </script>
 
